fix: Increase margin-top for feature sections to improve spacing

--- a/_sass/pages/_custom.scss
+++ b/_sass/pages/_custom.scss
@@ -52,7 +52,7 @@
         margin-bottom: 1.5rem;
     }
     #featuresDescription > .row + .row{
-        margin-top: 3rem;
+        margin-top: 5rem;
     }
 }
 /*-------------- Pricing page --------------*/
